# odlk-progs

./: .gitmodules  CMakeLists.txt  README.md  check.sh  input.txt  names.txt  sort_squares.cpp
cmakefbc/cmake/Modules/: CMakeDetermineFbcCompiler.cmake  CMakeFbcCompiler.cmake.in  CMakeFbcInformation.cmake  CMakeTestFbcCompiler.cmake
family_mar/: input.txt  kanonizator.cpp  output.txt  prov_blk.h  prov_blk_main.cpp  prov_blk_trans.cpp  prov_blk_trans.h
gen_lk_4_31_31/: family_4_31_31_IAEDCLHQS.txt  gen_lk_4_31_31.cpp  izomorfizm.cpp  izomorfizm.h  kan_shab_4_31_31.cpp  kan_shab_4_31_31.h  kanon.cpp  kanon.h  main_const.h  massivy.h  readme.txt
gen_lk_4_31_31/names_family_4_31_31/: names_43423_26489.txt  names_44323_4696.txt  names_44323p_21332.txt  names_44323p_21362.txt
generator_kf/: kanonizator_gen.cpp  kanonizator_gen.h  main_gen.cpp  massivy_gen.h  readme.txt
generator_lk_4_31_31/generator_lk_4_31_31/: gen_4_31_31.bat  readme.txt
generator_lk_4_31_31/source/: gen_lk_4_31_31.cpp  izomorfizm.cpp  izomorfizm.h  kan_shab_4_31_31.cpp  kan_shab_4_31_31.h  kanon.cpp  kanon.h  main_const.h  massivy.h
kanonizator_dlk/: kanonizator.cpp  kanonizator.h  main_kanon.cpp  massivy.h  readme.txt
kanonizator_dlk_1.03/: input.txt  kanonizator.cpp  kanonizator.h  main_kanon.cpp  massivy.h  output.txt  readme.txt
kanonizator_lk/: input.txt  kanon.cpp  kanon.h  main.cpp  massivy.h  output.txt
lua/: Makefile  driver.cpp  driver.lua  sample2_wu.lua  sample3_wu.lua  sample_user.lua
lua/lua-5.3.5/: src.tar.xz
lua/lua-5.3.5/src/: Makefile  luaconf.h
odlkcommon/: common.h  kvio.cpp  namechdlk10.cpp  namechdlk10.h
ortogon/: exact_cover.cpp  exact_cover.h  main_ortogon.cpp  mout.txt
primes/: Makefile  generate1.cpp  scpn2.cpp  sievetest.cpp  stuff.cpp  wio.cpp
psevdoass/: ASS_DLK10A.BAS  PSEVDOASS_DLK_new.BAS  mar_abkm_4.3.7.2.1.9.5.6.txt  psevdoass.cpp  test1.cpp
search5/: Makefile  Stream.cpp  asim.cpp  cleaner.cpp  create_wu.cpp  gener.cpp  gensegments.cpp  genwu.cpp  mksample.cpp  note.txt  search5.cpp  show.cpp  wio.cpp
source/: kanonizator.cpp  kanonizator.h  massivy.h  prov_blk.h  prov_blk_main.cpp  prov_blk_trans.cpp  prov_blk_trans.h
symprtu/: Makefile  Stream.cpp  asim.cpp  asim_old.cpp  generate1.cpp  generate2.cpp  generate3.cpp  note.txt  scpn1.cpp  server.cpp  sievetest.cpp  spt.cpp  spt_list.php  stuff.cpp  wio.cpp
zamyk/: Readme.md  check.cpp  dlkdbop.cpp  namechdlk10.cpp  ortogoncnt.cpp  postprocess.cpp  text.py
